[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mock-server"
version = "1.0.0"
description = "一个用于模拟API响应和记录真实请求日志的服务器"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "Flask>=2.0.0",
    "flask-cors>=3.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/mockServer"
Repository = "https://github.com/yourusername/mockServer.git"

[project.scripts]
mock-server = "app:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["log-viewer*", "logs*", "mocked*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]